--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ body{
             padding-left: 45px;
         }
         .piece{
-            height: 15vh;
+            height: 150px;
         }
         .ui{
             color: #ffff;
@@ -68,13 +68,12 @@ body{
             height: 3vh;
         }
         .conteudo{
-            white-space: pre-line;
             font-size: 20px;
             text-align: center;
             line-height: 25px;
-            word-break: keep-all;
             color: #ffff;
             padding-top: 5vh;
+            width: 1500px;
         }
         .info {
             appearance: none;
